--- a/angular.json
+++ b/angular.json
@@ -127,6 +127,7 @@
   },
   "defaultProject": "shop",
   "cli": {
-    "analytics": false
+    "analytics": false,
+    "defaultCollection": "@ngrx/schematics"
   }
 }
